--- a/app/containers/Home/style.scss
+++ b/app/containers/Home/style.scss
@@ -1,10 +1,7 @@
-.app-wrapper {
-  max-width: calc(768px + 16px * 2);
-  margin: 0 auto;
-  display: flex;
-  min-height: 100%;
-  padding: 0 16px;
-  flex-direction: column;
+.home-container {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 .app-title {
@@ -13,7 +10,9 @@
 }
 
 .message-log-wrapper {
-    margin: 50px 0; 
+    margin: 50px 0;
+    flex-grow: 1;
+    overflow-y: scroll;
 }
 
 .message-log-srollable {
