--- a/app/global-style.scss
+++ b/app/global-style.scss
@@ -2,6 +2,8 @@ html,
 body {
   height: 100%;
   width: 100%;
+  margin: 0;
+  padding: 0;
   overflow: hidden;
 }
 
@@ -13,9 +15,11 @@ body.fontLoaded {
   font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
-#app {
-  background-color: #fafafa;
-  min-height: 100%;
-  min-width: 100%;
+#app_root {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
   overflow: hidden;
+  background-color: #fafafa;
 }
